--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </header>
     <nav>
       <a href="exercicios/texto.html">Texto</a> 
-      <a href="exercicios/01.html">01</a>
+      <a href="exercicios/listas.html">Listas</a>
     </nav>
     <section id="conteudo"></section>
     <footer>
