--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <nav>
       <a href="exercicios/texto.html">Texto</a> 
       <a href="exercicios/listas.html">Listas</a>
+      <a href="exercicios/links.html">Links</a>
+      <a href="exercicios/"></a>
     </nav>
     <section id="conteudo"></section>
     <footer>
-      FOOTER
     </footer>
     <script>
       document.querySelectorAll('a').forEach(link => {
