--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <a href="exercicios/texto.html">Texto</a> 
       <a href="exercicios/listas.html">Listas</a>
       <a href="exercicios/links.html">Links</a>
-      <a href="exercicios/"></a>
+      <a href="exercicios/tabela.html">Tabela</a>
     </nav>
     <section id="conteudo"></section>
     <footer>
